--- a/RDataScience.Rmd
+++ b/RDataScience.Rmd
@@ -11,63 +11,82 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Introduction
+# R For Data Science
 
-## Running R code
+## Data Visualisation
 
-Examples of some code:
+R has several systems for making graphs, but `ggplot2` is one of the most elegant and versatile. It implements the *grammar of graphics*, a coherent system for describing and building graphs.
+
+In order to use `ggplot2`, we first need to load the `tidyverse` package.
+
+```{r, results='hide'}
+library(tidyverse)
+```
+
+1. Do cars with big engines use more fuel than cars with small engines? Use the `mpg` *data frame* found in ggplot2.
+
+```{r mpg}
+mpg
+?mpg
+```
+
+Among the variables in `mpg` are:
+
+1. `displ`, a car's engine size, in litres.
+2. `hwy`, a car's fuel efficiency on the highway, in miles per gallon (mpg). A car with low fuel efficiency consumes more fuel than a car with high fuel efficiency when they travel the same distance.
+
+### Creating a ggplot
+
+To plot `mpg`:
+```{r}
+ggplot(data = mpg) +
+  geom_point(mapping = aes(x = displ, y = hwy))
+```
+
+### Graphing a template
+
+Template for making graphs:
+
+`ggplot(data = <DATA>) + <GEOM_FUNCTION>(mapping = aes(<MAPPINGS>))`
+    
+### Exercises
+
+1. Run `ggplot(data = mpg)`. What do you see?
 
 ```{r}
-1 + 2
+ggplot(data = mpg)
 ```
 
-The easiest way to include *data* in a question is to use dput() to generate the R code to recreate it. For example, to recreate the mtcars dataset in R:
+There's an empty grey box.
 
-1. Run dput(mtcars) in R
-```{r results='hide'}
-dput(mtcars)
+2. How many rows are in `mpg`? How many columns?
 
-```
-2. Copy the output
-3. In my reproducible script, type mtcars <- then paste
 ```{r}
-mtcars <- structure(list(mpg = c(21, 21, 22.8, 21.4, 18.7, 18.1, 14.3, 
-24.4, 22.8, 19.2, 17.8, 16.4, 17.3, 15.2, 10.4, 10.4, 14.7, 32.4, 
-30.4, 33.9, 21.5, 15.5, 15.2, 13.3, 19.2, 27.3, 26, 30.4, 15.8, 
-19.7, 15, 21.4), cyl = c(6, 6, 4, 6, 8, 6, 8, 4, 4, 6, 6, 8, 
-8, 8, 8, 8, 8, 4, 4, 4, 4, 8, 8, 8, 8, 4, 4, 4, 8, 6, 8, 4), 
-    disp = c(160, 160, 108, 258, 360, 225, 360, 146.7, 140.8, 
-    167.6, 167.6, 275.8, 275.8, 275.8, 472, 460, 440, 78.7, 75.7, 
-    71.1, 120.1, 318, 304, 350, 400, 79, 120.3, 95.1, 351, 145, 
-    301, 121), hp = c(110, 110, 93, 110, 175, 105, 245, 62, 95, 
-    123, 123, 180, 180, 180, 205, 215, 230, 66, 52, 65, 97, 150, 
-    150, 245, 175, 66, 91, 113, 264, 175, 335, 109), drat = c(3.9, 
-    3.9, 3.85, 3.08, 3.15, 2.76, 3.21, 3.69, 3.92, 3.92, 3.92, 
-    3.07, 3.07, 3.07, 2.93, 3, 3.23, 4.08, 4.93, 4.22, 3.7, 2.76, 
-    3.15, 3.73, 3.08, 4.08, 4.43, 3.77, 4.22, 3.62, 3.54, 4.11
-    ), wt = c(2.62, 2.875, 2.32, 3.215, 3.44, 3.46, 3.57, 3.19, 
-    3.15, 3.44, 3.44, 4.07, 3.73, 3.78, 5.25, 5.424, 5.345, 2.2, 
-    1.615, 1.835, 2.465, 3.52, 3.435, 3.84, 3.845, 1.935, 2.14, 
-    1.513, 3.17, 2.77, 3.57, 2.78), qsec = c(16.46, 17.02, 18.61, 
-    19.44, 17.02, 20.22, 15.84, 20, 22.9, 18.3, 18.9, 17.4, 17.6, 
-    18, 17.98, 17.82, 17.42, 19.47, 18.52, 19.9, 20.01, 16.87, 
-    17.3, 15.41, 17.05, 18.9, 16.7, 16.9, 14.5, 15.5, 14.6, 18.6
-    ), vs = c(0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 
-    0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1), am = c(1, 
-    1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 
-    0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1), gear = c(4, 4, 4, 3, 
-    3, 3, 3, 4, 4, 4, 4, 3, 3, 3, 3, 3, 3, 4, 4, 4, 3, 3, 3, 
-    3, 3, 4, 5, 5, 5, 5, 5, 4), carb = c(4, 4, 1, 1, 2, 1, 4, 
-    2, 2, 4, 4, 3, 3, 3, 4, 4, 4, 1, 2, 1, 1, 2, 2, 4, 2, 1, 
-    2, 2, 4, 6, 8, 2)), .Names = c("mpg", "cyl", "disp", "hp", 
-"drat", "wt", "qsec", "vs", "am", "gear", "carb"), row.names = c("Mazda RX4", 
-"Mazda RX4 Wag", "Datsun 710", "Hornet 4 Drive", "Hornet Sportabout", 
-"Valiant", "Duster 360", "Merc 240D", "Merc 230", "Merc 280", 
-"Merc 280C", "Merc 450SE", "Merc 450SL", "Merc 450SLC", "Cadillac Fleetwood", 
-"Lincoln Continental", "Chrysler Imperial", "Fiat 128", "Honda Civic", 
-"Toyota Corolla", "Toyota Corona", "Dodge Challenger", "AMC Javelin", 
-"Camaro Z28", "Pontiac Firebird", "Fiat X1-9", "Porsche 914-2", 
-"Lotus Europa", "Ford Pantera L", "Ferrari Dino", "Maserati Bora", 
-"Volvo 142E"), class = "data.frame")
+mpg
+?mpg
 ```
+
+There's 234 rows and 11 variables (columns).
+
+3. What does `drv` variable describe?
+
+`drv`: f = front-wheel drive, r = rear wheel drive, 4 = 4wd.
+
+4. Make a scatterplot of `hwy` vs `cyl`
+
+```{r scatterplot}
+ggplot(data = mpg) +
+  geom_point(mapping = aes(x = hwy, y = cyl))
+```
+
+5. What happens if you make a scatter plot of `class` vs `drv`? Why is the plot not useful?
+
+```{r trash}
+ggplot(data = mpg) +
+  geom_point(mapping = aes(x = class, y = drv))
+```
+It makes a scatter plot, however there is not enough information for this to be useful. Only portrays if a vehicle is front-wheeler, rear-wheeler, or 4-wheeler.
+
+## Aesthetic mappings
+
 
