--- a/RDataScience.Rmd
+++ b/RDataScience.Rmd
@@ -969,3 +969,519 @@ Cosine, sine, tangent, arc-tangent, arc-sine, arc-tangent, and the two-argument 
 
 ### 5.6 Grouped summaries with `summarise()`
 
+`summarise()` is the last key verb. It collapses a data frame to a single row:
+
+```{r summarise1}
+summarise(flights, delay = mean(dep_delay, na.rm = TRUE))
+```
+
+`summarise()` is not very useful unless we pair it with `group_by()`. This changes the unit of analysis from the complete dataset to individual groups.
+
+```{r summarise2}
+by_day <- group_by(flights, year, month, day)
+summarise(by_day, delay = mean(dep_delay, na.rm = TRUE))
+```
+
+#### 5.6.1 Combining multiple operations with the pipe
+
+```{r pipe1}
+by_dest <- group_by(flights, dest)
+delay <- summarise(by_dest,
+                   count = n(),
+                   dist = mean(distance, na.rm = TRUE),
+                   delay = mean(arr_delay, na.rm = TRUE))
+delay <- filter(delay, count > 20, dest != "HNL")
+
+# It looks like delays increse with distance up to ~750 miles
+# and then decrease. Maybe as flights get longer there's more
+# ability to make up delays in the air
+ggplot(data = delay, mapping = aes(x = dist, y = delay)) +
+  geom_point(aes(size = count), alpha = 1/3) +
+  geom_smooth(se = FALSE)
+```
+
+A simpler way to tackle this:
+```{r pipe2}
+delays <- flights %>%
+  group_by(dest) %>%
+  summarise(
+    count = n(),
+    dist = mean(distance, na.rm = TRUE),
+    delay = mean(arr_delay, na.rm = TRUE)) %>%
+  filter(count > 20, dest != "HNL")
+```
+  
+Behind the scenes:
+`x %>% f(y)` -> `f(x,y)` and `x %>% f(y) %>% g(z)` -> `g(f(x,y), z)`
+
+#### 5.6.2 Missing values
+
+How to remove missing values. For example, by removing the cancelled flights we can obtain the most exact mean for delays for a day.
+
+```{r missing1}
+not_cancelled <- flights %>%
+  filter(!is.na(dep_delay), !is.na(arr_delay))
+
+not_cancelled %>%
+  group_by(year, month, day) %>%
+  summarise(mean = mean(dep_delay))
+```
+
+#### 5.6.3 Counts
+
+Whenever you do any aggregation, it's always a good idea to include either a count (`n()`), or  aocunt of non-missing values (`sum(!is.na(x))`). This way you can check that you're not drawing conclusions based on very small amounts of data. For example, let's look at the planes (id by tail number) that have the highest average delays:
+
+```{r counts1}
+delays <- not_cancelled %>% 
+  group_by(tailnum) %>% 
+  summarise(
+    delay = mean(arr_delay, na.rm = TRUE),
+    n = n()
+  )
+
+ggplot(data = delays, mapping = aes(x = n, y = delay)) + 
+  geom_point(alpha = 1/10)
+```
+
+Can put everything together by using a combination of `%>%` and `+`.
+
+```{r counts2}
+delays %>% 
+  filter(n > 25) %>% 
+  ggplot(mapping = aes(x = n, y = delay)) + 
+    geom_point(alpha = 1/10)
+```
+
+#### 5.6.4 Useful summary functions
+
+* Measures of location: `mean(x)` and `median(x)`.
+
+```{r mean1}
+not_cancelled %>% 
+  group_by(year, month, day) %>% 
+  summarise(
+    avg_delay1 = mean(arr_delay),
+    avg_delay2 = mean(arr_delay[arr_delay > 0]) # the average positive delay
+  )
+```
+
+* Measures of spread: `sd(x)`, `IQR(x)`, `mad(x)`.
+
+```{r sd1}
+# Why is distance to some destinations more variable than to others?
+not_cancelled %>% 
+  group_by(dest) %>% 
+  summarise(distance_sd = sd(distance)) %>% 
+  arrange(desc(distance_sd))
+```
+
+* Measures of rank: `min(x)`, `quantile(x, 0.25)`, `max(x)`. `quantile(x, 0.25)` will find a value of `x` that is gretaer than 25%, and les than the remaining 75%.
+
+```{r rankingtanki}
+# When do the first and last flights leave each day?
+not_cancelled %>% 
+  group_by(year, month, day) %>% 
+  summarise(
+    first = min(dep_time),
+    last = max(dep_time)
+  )
+```
+
+* Measures of position: `first(x)`, `nth(x,2)`, `last(x)`. These work similarly to `x[1]`, `x[2]`, and `x[length(x)]` but let you set a default value if that position does not exist.
+
+```{r positionrank}
+not_cancelled %>% 
+  group_by(year, month, day) %>% 
+  summarise(
+    first_dep = first(dep_time), 
+    last_dep = last(dep_time)
+  )
+
+# These functions are complementary to filtering on ranks.
+# Filtering gives you all variables, with each obs in a separate row
+
+not_cancelled %>% 
+  group_by(year, month, day) %>% 
+  mutate(r = min_rank(desc(dep_time))) %>% 
+  filter(r %in% range(r))
+```
+
+* Counts: `n()`, `sum(!is.na(x))`, and `n_distinct(x)` counts the number of unique values.
+
+```{r counts3}
+# Which destinations have the most carriers?
+not_cancelled %>% 
+  group_by(dest) %>% 
+  summarise(carriers = n_distinct(carrier)) %>% 
+  arrange(desc(carriers))
+```
+
+* Counts and prop of logical values: `sum(x > 10)`, `mean(y == 0)`.
+
+```{r counts4}
+# How many flights left before 5am? (these usually indicate delayed
+# flights from the previous day)
+not_cancelled %>% 
+  group_by(year, month, day) %>% 
+  summarise(n_early = sum(dep_time < 500))
+```
+
+#### 5.6.5 Grouping by multiple variables
+
+```{r grouping1}
+daily <- group_by(flights, year, month, day)
+(per_day   <- summarise(daily, flights = n()))
+(per_month <- summarise(per_day, flights = sum(flights)))
+(per_year  <- summarise(per_month, flights = sum(flights)))
+```
+
+#### 5.6.6 Ungrouping
+
+Use `ungroup()`.
+
+```{r ungroup}
+daily %>% 
+  ungroup() %>%             # no longer grouped by date
+  summarise(flights = n())  # all flights
+```
+
+#### 5.6.7 Exercises
+
+1. Brainstorm at least 5 different ways to assess the typical delay characteristics of a group of flights. Consider the following scenarios:
+
+* A flight is 15 minutes early 50% of the time, and 15 minutes late 50% of the time.
+* A flight is always 10 minutes late
+* A flight is 30 minutes early 50% of the time, and 30 minutes late 50% of the time.
+* 99% of the time a flight is on time. 1% of the time it's 2 hours late.
+
+```{r summariesex1}
+# A flight is 15 minutes early 50% of the time, and 15 minutes late 50% of the time.
+flights %>%
+  group_by(flight) %>%
+  summarise(early_15_min = sum(arr_delay <= -15, na.rm = TRUE) / n(),
+            late_15_min = sum(arr_delay >= 15, na.rm = TRUE) / n()) %>%
+  filter(early_15_min == 0.5,
+         late_15_min == 0.5)
+
+# A flight is always 10 minutes late.
+flights %>%
+  group_by(flight) %>%
+  summarise(late_10 = sum(arr_delay == 10, na.rm = TRUE) / n()) %>%
+  filter(late_10 == 1)
+
+# A flight is 30 minutes early 50% of the time, and 30 minutes late 50% of the time.
+flights %>%
+  group_by(flight) %>%
+  summarise(early_30_min = sum(arr_delay <= -30, na.rm = TRUE) / n(),
+            late_30_min = sum(arr_delay >= 30, na.rm = TRUE) / n()) %>%
+  filter(early_30_min == 0.5,
+         late_30_min == 0.5)
+
+# 99% of the time a flight is on time. 1% of the time it's 2 hours late.
+flights %>%
+  group_by(flight) %>%
+  summarise(on_time = sum(arr_delay == 0, na.rm = TRUE) / n(),
+            late_2_hours = sum(arr_delay >= 120, na.rm = TRUE) / n()) %>%
+  filter(on_time == .99,
+         late_2_hours == .01)
+```
+
+Which is more important: `arr_delay` or `dep_delay`?
+
+Delay type importance depends on individual preference. If an individual hates waiting in the terminal for the flight to take off, then `dep_delay` is more important and vice versa.
+
+2. Come up with another approach that will give you the same output as `not_cancelled %>% count(dest)` and `not_cancelled %>% count(tailnum, wt = distance)`. No using `count()`.
+
+```{r summariseex2}
+not_cancelled <- flights %>%
+  filter(!is.na(dep_delay), !is.na(arr_delay))
+
+# original
+not_cancelled %>%
+  count(dest)
+
+# new
+not_cancelled %>%
+  group_by(dest) %>%
+  summarise(n = n())
+
+# original2
+not_cancelled %>%
+  count(tailnum, wt = distance)
+
+# new2
+not_cancelled %>%
+  group_by(tailnum) %>%
+  summarise(n = sum(distance, na.rm = TRUE))
+```
+
+3. Our definition of cancelled flights (`is.na(dep_delay) | is.na(arr_delay)`) is slightly suboptimal. Why? Which is the most important column?
+
+There are no flights which arrived but did not depart, so we can just use `!is.na(dep_delay)`.
+
+4. Look at the number of cancelled flights per day. Is there a pattern? Is the proportion of cancelled flights related to the average delay?
+
+```{r summariseex4}
+flights %>%
+  filter(is.na(dep_delay)) %>%
+  count(day)
+
+flights %>%
+  group_by(day) %>%
+  summarise(prop_canceled = sum(is.na(dep_delay)) / n(),
+            avg_delay = mean(dep_delay, na.rm = TRUE)) %>%
+  ggplot(mapping = aes(x = avg_delay, y = prop_canceled)) +
+  geom_point() + 
+  geom_smooth(se = FALSE)
+```
+
+5. Which carrier has the worst delays? Challenge: can you disentangle the effects of bad airports vs. bad carriers? Why/why not? (Hint: think about `flights %>% group_by(carrier, dest) %>% summarise(n())`)
+
+```{r summariseex5}
+# worst delays
+flights %>%
+  group_by(carrier) %>%
+  summarize(mean_delay = mean(arr_delay, na.rm = TRUE)) %>%
+  arrange(desc(mean_delay))
+
+# challenge: bad airports vs. bad carriers
+flights %>%
+  group_by(carrier, dest) %>%
+  summarize(mean_delay = mean(arr_delay, na.rm = TRUE)) %>%
+  group_by(carrier) %>%
+  summarize(mean_delay_mad = mad(mean_delay, na.rm = TRUE)) %>%
+  arrange(desc(mean_delay_mad))
+```
+
+6. What does the `sort` argument to `count()` do. When might you use it?
+
+The `sort` argument sorts the results of `count()` in descending order of `n`. Might use this if plan to use `arrange()`, will save a line of code.
+
+### 5.7 Grouped mutates (and filters)
+
+* Find the worst members of each group:
+```{r gp1}
+flights_sml %>% 
+  group_by(year, month, day) %>%
+  filter(rank(desc(arr_delay)) < 10)
+```
+
+* find all groups bigger than a threshold
+```{r gp2}
+popular_dests <- flights %>% 
+  group_by(dest) %>% 
+  filter(n() > 365)
+popular_dests
+```
+
+* Standardise to compute per group metrics:
+```{r gp3}
+popular_dests %>% 
+  filter(arr_delay > 0) %>% 
+  mutate(prop_delay = arr_delay / sum(arr_delay)) %>% 
+  select(year:day, dest, arr_delay, prop_delay)
+```
+
+#### 5.7.1 Exercises
+
+1. Useful mutate and filtering functions.
+2. Which plane (`tailnum`) has the worst on-time record? "on-time" -> arriving within 30 minutes of sched arrival.
+
+```{r gpex2}
+flights %>%
+  group_by(tailnum) %>%
+  summarize(prop_on_time = sum(arr_delay <= 30, na.rm = TRUE) / n(),
+            mean_arr_delay = mean(arr_delay, na.rm = TRUE),
+            flights = n()) %>%
+  arrange(prop_on_time, desc(mean_arr_delay))
+```
+
+3. What time of day should you fly if you want to avoid delays as much as possible?
+
+```{r gpex3}
+flights %>%
+  group_by(hour) %>%
+  summarize(arr_delay = sum(arr_delay > 5, na.rm = TRUE) / n()) %>%
+  ggplot(aes(x = hour, y = arr_delay)) +
+  geom_col()
+```
+
+Avoid flying in the evening to minimize your arrival delay.
+
+5. Delays are typically temporally correlated: even once the problem that caused the initial delay has been resolved, later flights are delayed to allow earlier flights to leave. Using lag() explore how the delay of a flight is related to the delay of the immediately preceding flight.
+
+```{r gpex5}
+flights %>%
+  group_by(origin) %>%
+  arrange(year, month, day, hour, minute) %>%
+  mutate(prev_dep_delay = lag(dep_delay)) %>%
+  ggplot(aes(x = prev_dep_delay, y = dep_delay)) +
+  geom_point() +
+  geom_smooth()
+```
+
+## 7 Exploratory Data Analysis
+
+#### 7.3.4 Exercises
+
+1. Explore the distribution of each of the x, y, and z variables in diamonds. What do you learn? Think about a diamond and how you might decide which dimension is the length, width, and depth.
+
+```{r expex1}
+ggplot(diamonds, aes(x)) +
+  geom_histogram()
+ggplot(diamonds, aes(y)) +
+  geom_histogram()
+ggplot(diamonds, aes(z)) +
+  geom_histogram()
+```
+
+2. Explore the distribution of price. Do you discover anything unusual or surprising? (Hint: Carefully think about the binwidth and make sure you try a wide range of values.)
+
+```{r expex2}
+# default binwidth
+ggplot(diamonds, aes(price)) +
+  geom_histogram()
+
+# binwidth = 100
+ggplot(diamonds, aes(price)) +
+  geom_histogram(binwidth = 100) +
+  scale_x_continuous(breaks = seq(0, 20000, by = 1000))
+```
+
+There are far fewer diamonds priced at $1500 compared to other price points. This is not apparent using the default number of bins.
+
+3.How many diamonds are 0.99 carat? How many are 1 carat? What do you think is the cause of the difference?
+
+```{r expex3}
+ggplot(diamonds, aes(carat)) +
+  geom_histogram(binwidth = .01) +
+  coord_cartesian(xlim = c(.97, 1.03))
+```
+
+More 1.00 carat diamonds than .99 diamonds. As it doesn't make much sense to buy a .99 carat diamond if you can get a 1.00 carat diamond for a little bit more money.
+
+4. Compare and contrast coord_cartesian() vs xlim() or ylim() when zooming in on a histogram. What happens if you leave binwidth unset? What happens if you try and zoom so only half a bar shows?
+
+```{r expex4}
+# full plot
+ggplot(diamonds, aes(carat, price)) +
+  geom_point() +
+  geom_smooth()
+
+# xlim
+ggplot(diamonds, aes(carat, price)) +
+  geom_point() +
+  geom_smooth() +
+  xlim(1, 3)
+
+# coord_cartesian
+ggplot(diamonds, aes(carat, price)) +
+  geom_point() +
+  geom_smooth() +
+  coord_cartesian(xlim = c(1, 3))
+```
+
+By using xlim() or ylim(), you remove all observations which exceed these values so they are not used to generate the plot. By using coord_cartesian(), those values are used to generate the plot and are merely cut off when zooming in. Note the change in the smoothing line in the xlim() example because it doesn’t have all the data points to calculate the line.
+
+### 7.4 Missing values
+
+Recommend replacing unusual values with missing values. Easiest way to do it is to use `mutate()` and `ifelse()`.
+
+```{r missingvals1}
+diamonds2 <- diamonds %>% 
+  mutate(y = ifelse(y < 3 | y > 20, NA, y))
+```
+
+What does `na.rm = TRUE` do in `mean()` and `sum()`?
+
+It strips missing values before computing the statistic.
+
+### 7.5 Covariation
+
+#### 7.5.1.1 Exercises
+
+1. Use what you’ve learned to improve the visualisation of the departure times of cancelled vs. non-cancelled flights.
+
+```{r covarex1}
+# original chart
+flights %>% 
+  mutate(
+    cancelled = is.na(dep_time),
+    sched_hour = sched_dep_time %/% 100,
+    sched_min = sched_dep_time %% 100,
+    sched_dep_time = sched_hour + sched_min / 60
+    ) %>%
+  ggplot(mapping = aes(sched_dep_time)) + 
+  geom_freqpoly(mapping = aes(colour = cancelled), binwidth = 1/4)
+
+# revised chart
+flights %>% 
+  mutate(
+    cancelled = is.na(dep_time),
+    sched_hour = sched_dep_time %/% 100,
+    sched_min = sched_dep_time %% 100,
+    sched_dep_time = sched_hour + sched_min / 60
+    ) %>%
+  ggplot(aes(x = sched_dep_time, y = ..density.., color = cancelled)) + 
+  geom_freqpoly(binwidth = 1/4)
+```
+
+2. What variable in the diamonds dataset is most important for predicting the price of a diamond? How is that variable correlated with cut? Why does the combination of those two relationships lead to lower quality diamonds being more expensive?
+
+```{r covarex2}
+ggplot(diamonds, aes(carat, price)) +
+  geom_point() +
+  geom_smooth()
+
+ggplot(diamonds, aes(cut, carat)) +
+  geom_boxplot()
+```
+
+Carat size is the most important predictor of price. On avg, fair and good cut diamonds are larger than premium and ideal cuts.
+
+3. Install the ggstance package, and create a horizontal boxplot. How does this compare to using coord_flip()?
+
+To create a horizontal layer in ggplot2 with coord_flip(), you have to supply aesthetics as if they were to be drawn vertically:
+
+```{r covarex3}
+ggplot(diamonds, aes(cut, carat)) +
+  geom_boxplot() +
+  coord_flip()
+
+# In ggstance, you supply aesthetics in their natural order
+library(ggstance)
+ggplot(diamonds, aes(carat, cut)) +
+  geom_boxploth()
+```
+
+4. One problem with boxplots is that they were developed in an era of much smaller datasets and tend to display a prohibitively large number of “outlying values”. One approach to remedy this problem is the letter value plot. Install the lvplot package, and try using geom_lv() to display the distribution of price vs cut. What do you learn? How do you interpret the plots?
+
+```{r covarex4}
+library(lvplot)
+
+# with boxplot
+ggplot(diamonds, aes(cut, price)) +
+  geom_boxplot()
+
+# with lvplot 
+ggplot(diamonds, aes(cut, price)) +
+  geom_lv()
+```
+
+5. Compare and contrast geom_violin() with a facetted geom_histogram(), or a coloured geom_freqpoly(). What are the pros and cons of each method?
+
+```{r covarex5}
+# geom_violin
+ggplot(diamonds, aes(cut, price)) +
+  geom_violin()
+
+# faceted geom_histogram
+ggplot(diamonds, aes(price)) +
+  geom_histogram() +
+  facet_grid(. ~ cut)
+
+# colored geom_freqpoly
+ggplot(diamonds, aes(price, color = cut)) +
+  geom_freqpoly()
+```
+
