--- a/RDataScience.Rmd
+++ b/RDataScience.Rmd
@@ -1457,6 +1457,7 @@ ggplot(diamonds, aes(carat, cut)) +
 4. One problem with boxplots is that they were developed in an era of much smaller datasets and tend to display a prohibitively large number of “outlying values”. One approach to remedy this problem is the letter value plot. Install the lvplot package, and try using geom_lv() to display the distribution of price vs cut. What do you learn? How do you interpret the plots?
 
 ```{r covarex4}
+# devtools::install_github("hadley/lvplot")
 library(lvplot)
 
 # with boxplot
@@ -1484,4 +1485,152 @@ ggplot(diamonds, aes(price)) +
 ggplot(diamonds, aes(price, color = cut)) +
   geom_freqpoly()
 ```
+
+## 10. Tibbles
+
+In order to coerce a data frame into a tibble. You can do that with `as_tibble()`:
+
+```{r tibble1}
+as_tibble(iris)
+```
+
+Can create a new tibble from individual vectors with `tibble()`.
+
+```{r tibble2}
+tibble(
+  x = 1:5,
+  y = 1,
+  z = x ^ 2 + y
+)
+```
+
+Another way to create a tibble is with `tribble()`.
+
+```{r tribble1}
+tribble(
+  ~x, ~y, ~z,
+  #--|--|----
+  "a", 2, 3.6,
+  "b", 1, 8.5
+)
+```
+
+The comment line `#--|--|----` is useful to make it really clear where the header is.
+
+### 10.3 Tibbles vs. data frame
+
+**Printing**
+
+Tibbles have a refined print method that shows only the first 10 rows, and all the columns that fit on screen. In addition to its name, each column reports its type, a nice feature borrowed from `str()`:
+
+```{r tibble3}
+tibble(
+  a = lubridate::now() + runif(1e3) * 86400,
+  b = lubridate::today() + runif(1e3) * 30,
+  c = 1:1e3,
+  d = runif(1e3),
+  e = sample(letters, 1e3, replace = TRUE)
+)
+```
+
+You can explictly `print()` the data frame and control the number of rows(`n`) and the `width` of the display. `width = Inf` displays all columns:
+
+```{r printing1, results = 'hide'}
+nycflights13::flights %>%
+  print(n = 10, width = Inf)
+```
+
+#### 10.3.2 Subsetting
+
+If you want to pull out a single variable, you need some new tools, `$` and `[[`. `[[` can extract by name or position; `$` only extracts by name but is a little less typing.
+
+```{r subsetting1}
+df <- tibble(
+  x = runif(5),
+  y = rnorm(5)
+)
+
+# Extract by name
+df$x
+df[["x"]]
+
+# Extract by position
+df[[1]]
+```
+
+Can be used in a pipe. Only need to use the special placeholder `.`:
+```{r subestting2}
+df %>% .$x
+df %>% .[["x"]]
+```
+
+Some older functions don't work with tibbles. Need to use `as.data.frame()`
+
+```{r asdataframe1}
+#class(as.data.frame(tb))
+```
+
+### 10.5 Exercises
+
+1. How can you tell if an object is a tibble?
+
+A data frame will print the entire contents. A tibble will only print (by default) the first 10 rows and as many columns as will fit in the console.
+
+2. Compare and contrast the following operations on a `data.frame` and equivalent tibble. What is different? Why might the default data frame behaviours cause you frustration?
+
+```{r tibbleex2}
+# on a data frame
+df <- data.frame(abc = 1, xyz = "a")
+df$x
+df[, "xyz"]
+df[, c("abc", "xyz")]
+
+# on a tibble
+df <- tibble(abc = 1, xyz = "a")
+df$x
+df[, "xyz"]
+df[, c("abc", "xyz")]
+```
+
+* Tibbles never do partial matching; data frames do.
+* Subsetting tibbles using `[[` will always return a tibble; subsetting data frames using `[[` can potentially return a vector.
+
+3. If you have the name of a variable stored in an object, e.g. `var <- "mpg"`, how can you extract the reference variable from a tibble?
+
+```{r tibbleex3}
+var <- "hwy"
+mpg[[var]]
+```
+
+4. Practice referring to non-systematic names in the following data frame by:
+
+```{r tibbleex4}
+annoying <- tibble(
+  `1` = 1:10,
+  `2` = `1` * 2 + rnorm(length(`1`))
+)
+
+# 1  Extracting the variable called `1`.
+annoying %>% .$`1`
+
+# 2 Plotting a scatterplot of `1` vs `2`.
+ggplot(annoying, aes(`1`, `2`)) +
+  geom_point()
+# 3 Creating a new column called `3` which is `2` divided by `1`
+(annoying <- mutate(annoying, `3` = `2` / `1`))
+# 4 Renaming the columns to `one`, `two` and `three`
+rename(annoying,
+       one = `1`,
+       two = `2`,
+       three = `3`)
+```
+
+5. What does `tibble::enframe()` do? When might you use it?
+
+`enframe()` is a helper function that converts named atomic vectors or lists to two-column data frames. You might use it if you have data stored in a named vector and you want to add it to a data frame and preserve both the name attribute and the actual value.
+
+6. What option control how many additional column names are printed at the footer of a tibble?
+
+`getOption("tibble.max_extra_cols")`
+
 
